Multilingual file update

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2217,7 +2217,102 @@
     "genOtp": "Generate OTP",
     "signSelect": "Sign selected",
     "correction": "Send for correction",
-    "reject": "Reject"
+    "reject": "Reject",
+    "receipting": {
+      "capture_receipt":"Capture receipt",
+      "receipt_details": "Receipt Details",
+      "currency": "Currency",
+      "payment_mode": "Payment Mode",
+      "bank_account": "Bank Account",
+      "receipting_point": "Receipting Point",
+      "receipt_number":"Receipt Number",
+      "amount_issued": "Amount Issued",
+      "cheque_type": "Cheque Type",
+      "ipf_financier": "IPF Financier",
+      "gross_receipt_amount": "Gross Receipt Amount",
+      "received_from": "Received From",
+      "drawers_bank": "Drawers Bank",
+      "receipt_date": "Receipt Date",
+      "narration": "Narration",
+      "payment_ref": "Payment Ref",
+      "other_ref": "Other Ref",
+      "document_date": "Document Date",
+      "manual_ref": "Manual Ref",
+      "save_receipt": "Save Receipt",
+      "print_receipt": "Print Receipt",
+      "cancel_receipt": "Cancel Receipt",
+      "search_transactions": "Search Transactions",
+      "print_confirmation": "Print Confirmation",
+      "print_status": "Print Status",
+      "printed": "Printed",
+      "spoilt_receipt_paper": "Spoilt Receipt Paper",
+      "not_printed": "Not Printed",
+      "uploadFiles":"Upload file",
+      "charges": "Charges",
+      "capitalInjection": "Capital Injection",
+      "deductions": "Deductions",
+      "chargeAmount": "Charge Amount"
+      
+    },
+    "allocation": {
+      "allocate_funds": "Allocate Funds",
+      "transactions": "Transactions",
+      "policies": "Policies",
+      "group_business_accounts": "Group Business Accounts",
+      "gl_accounts": "GL Accounts",
+      "client_name": "Client Name",
+      "amount": "Amount",
+      "allocated_amount": "Allocated Amount",
+      "policy_number": "Policy Number",
+      "account_number": "Account Number",
+      "code": "Code",
+      "description": "Description",
+      "total_allocated_amount": "Total Allocated Amount",
+      "save_allocations": "Save Allocations",
+      "print_receipt": "Print Receipt",
+      "add_allocation": "Add Allocation",
+      "allocation_type":"Allocation Type",
+      "allocatedAmount": "Allocated Amount",
+      "cancel_receipt": "Cancel Receipt"
+    },
+    
+    "client": {
+        "name": "Client Name",
+        "date": "Date",
+        "narration": "Narration",
+        "amount": "Amount"
+      },
+    "account_types": {
+      "manage_account_type": "Manage Account Type"
+    },
+    "common":{
+     "close":"cancel"
+  },
+  
+    "receipt_authorization": {
+      "title": "Receipt Authorization",
+      "normal_tab": "Normal Receipts",
+      "batch_tab": "Batch Receipts",
+      "select_all": "Select All",
+      "authorize_all": "Authorize All",
+      "reject_all": "Reject All",
+      "search":"Search",
+      "receipt_no": "Receipt No.",
+      "policy_no": "Policy No.",
+      "payment_memo": "Payment Memo",
+      "amount": "Amount",
+      "capture_date": "Capture Date",
+      "authorization_date":"authorization_date",
+      "status": "Status",
+      "actions":"Actions",
+      "authorize": "Authorize",
+      "reject": "Reject",
+      "rejection_remarks": "Rejection Remarks",
+      "close": "Close",
+      "statement_no": "Statement No.",
+      "total_amount": "Total Amount",
+      "send_sms_alerts": "Send SMS Alerts"
+    }
   },
   "campaignMngmt": {
     "campaigns": "Campaigns",
