hierarchy screens multilingual

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -247,7 +247,29 @@
     "lead_sources": "潜在客户来源",
     "no_lead_source_found": "未找到潜在客户来源",
     "lead_statuses": "潜在客户状态",
-    "no_lead_status_found": "未找到潜在客户状态"
+    "no_lead_status_found": "未找到潜在客户状态",
+    "hierarchyType": "层级类型",
+    "hierarchyLevels": "层级",
+    "subDivisions": "组织子部门",
+    "definedLevels": "定义的级别",
+    "form": "表单",
+    "parentDivision": "上级部门",
+    "divisionLevelType": "部门层级类型",
+    "divisionLevel": "部门层级",
+    "divisionHead": "部门主管",
+    "location": "地点",
+    "managerAllowed": "允许经理",
+    "overrideCommAllowed": "允许佣金覆盖",
+    "WEF": "生效日期",
+    "WET": "终止日期",
+    "prevSubdivHeads": "前任部门主管",
+    "accountType": "账户类型",
+    "headAccountType": "主账户类型",
+    "intermediary": "中介",
+    "payIntermediary": "支付中介",
+    "ranking": "排名",
+    "agentName": "代理名称",
+    "agentShortDesc": "代理简短描述"
   },
   "entities": {
     "account_number": "帐号",
