--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -247,7 +247,29 @@
     "lead_sources": "Lead Bronnen",
     "no_lead_source_found": "Geen Lead Bron gevonden",
     "lead_statuses": "Lead Statussen",
-    "no_lead_status_found": "Geen Lead Status gevonden"
+    "no_lead_status_found": "Geen Lead Status gevonden",
+    "hierarchyType": "Hierarchietyp",
+    "hierarchyLevels": "Hierarchieebenen",
+    "subDivisions": "Organisationseinheiten",
+    "definedLevels": "Definierte Ebenen",
+    "form": "Formular",
+    "parentDivision": "Übergeordnete Abteilung",
+    "divisionLevelType": "Abteilungsebene Typ",
+    "divisionLevel": "Abteilungsebene",
+    "divisionHead": "Abteilungsleiter",
+    "location": "Standort",
+    "managerAllowed": "Manager erlaubt",
+    "overrideCommAllowed": "Provisionserhöhung erlaubt",
+    "WEF": "WEF",
+    "WET": "WET",
+    "prevSubdivHeads": "Frühere Bereichsleiter",
+    "accountType": "Kontotyp",
+    "headAccountType": "Hauptkontotyp",
+    "intermediary": "Vermittler",
+    "payIntermediary": "Vermittler bezahlen",
+    "ranking": "Rangfolge",
+    "agentName": "Agentenname",
+    "agentShortDesc": "Agenten Kurzbeschreibung"
   },
   "entities": {
     "account_number": "Kontonummer",
