--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -247,7 +247,29 @@
     "lead_sources": "Fuentes de Lead",
     "no_lead_source_found": "No se encontraron fuentes de Lead",
     "lead_statuses": "Estados de los Leads",
-    "no_lead_status_found": "No se encontraron estados de Lead"
+    "no_lead_status_found": "No se encontraron estados de Lead",
+    "hierarchyType": "Tipo de Jerarquía",
+    "hierarchyLevels": "Niveles de Jerarquía",
+    "subDivisions": "Subdivisiones Org",
+    "definedLevels": "Niveles Definidos",
+    "form": "Formulario",
+    "parentDivision": "División Superior",
+    "divisionLevelType": "Tipo de Nivel de División",
+    "divisionLevel": "Nivel de División",
+    "divisionHead": "Jefe de División",
+    "location": "Ubicación",
+    "managerAllowed": "Gerente Permitido",
+    "overrideCommAllowed": "Permitir Sobrescribir Comisión",
+    "WEF": "Vigente desde",
+    "WET": "Vigente hasta",
+    "prevSubdivHeads": "Jefes anteriores de subdivisión",
+    "accountType": "Tipo de cuenta",
+    "headAccountType": "Tipo de cuenta principal",
+    "intermediary": "Intermediario",
+    "payIntermediary": "Pagar al intermediario",
+    "ranking": "Clasificación",
+    "agentName": "Nombre del agente",
+    "agentShortDesc": "Descripción corta del agente"
   },
   "entities": {
     "account_number": "Número de cuenta",
