--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -247,7 +247,29 @@
     "lead_sources": "Sources de Lead",
     "no_lead_source_found": "Aucune source de Lead trouvée",
     "lead_statuses": "Statuts des Leads",
-    "no_lead_status_found": "Aucun statut de Lead trouvé"
+    "no_lead_status_found": "Aucun statut de Lead trouvé",
+    "hierarchyType": "Type de Hiérarchie",
+    "hierarchyLevels": "Niveaux de Hiérarchie",
+    "subDivisions": "Sous-divisions Org",
+    "definedLevels": "Niveaux définis",
+    "form": "Formulaire",
+    "parentDivision": "Division parent",
+    "divisionLevelType": "Type de niveau de division",
+    "divisionLevel": "Niveau de division",
+    "divisionHead": "Chef de division",
+    "location": "Emplacement",
+    "managerAllowed": "Gestionnaire autorisé",
+    "overrideCommAllowed": "Commission de dérogation autorisée",
+    "WEF": "WEF",
+    "WET": "WET",
+    "prevSubdivHeads": "Anciens chefs de sous-division",
+    "accountType": "Type de compte",
+    "headAccountType": "Type de compte principal",
+    "intermediary": "Intermédiaire",
+    "payIntermediary": "Payer l'intermédiaire",
+    "ranking": "Classement",
+    "agentName": "Nom de l'agent",
+    "agentShortDesc": "Description courte de l'agent"
   },
   "entities": {
     "account_number": "Numéro de compte",
