--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -247,7 +247,29 @@
     "lead_sources": "Vyanzo vya Uongozi",
     "no_lead_source_found": "Hakuna Chanzo cha Uongozi kilichopatikana",
     "lead_statuses": "Hali za Uongozi",
-    "no_lead_status_found": "Hakuna Hali ya Uongozi Iliyopatikana"
+    "no_lead_status_found": "Hakuna Hali ya Uongozi Iliyopatikana",
+    "hierarchyType": "Aina ya Hiyerakia",
+    "hierarchyLevels": "Ngazi za Hiyerakia",
+    "subDivisions": "Migawanyiko ya Shirika",
+    "definedLevels": "Ngazi Zilizobainishwa",
+    "form": "Fomu",
+    "parentDivision": "Kitengo cha Mzazi",
+    "divisionLevelType": "Aina ya Ngazi ya Kitengo",
+    "divisionLevel": "Ngazi ya Kitengo",
+    "divisionHead": "Mkuu wa Kitengo",
+    "location": "Eneo",
+    "managerAllowed": "Meneja Ameruhusiwa",
+    "overrideCommAllowed": "Kuruhusu Ongezeko la Kamisheni",
+    "WEF": "WEF",
+    "WET": "WET",
+    "prevSubdivHeads": "Wakuu wa Mgawanyiko wa Awali",
+    "accountType": "Aina ya Akaunti",
+    "headAccountType": "Aina ya Akaunti Kuu",
+    "intermediary": "Wakala",
+    "payIntermediary": "Lipa wakala",
+    "ranking": "Cheo",
+    "agentName": "Jina la Wakala",
+    "agentShortDesc": "Maelezo mafupi ya Wakala"
   },
   "entities": {
     "account_number": "Nambari ya Akaunti",
