new client design implementation

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -498,7 +498,9 @@
     "reports": "报告",
     "reports_content": "报告内容",
     "required": "必需的",
-    "residential_address_details": "住宅地址详情",
+    "residential_address_details": "居住地址详情",
+    "uploadDocs": "上传文件",
+    "chooseFile": "选择文件",
     "road": "道路",
     "road_required": "道路是必需的",
     "roles": "角色",
