--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -498,7 +498,9 @@
     "reports": "Berichte",
     "reports_content": "Berichtsinhalte",
     "required": "Erforderlich",
-    "residential_address_details": "Wohnadressendetails",
+    "residential_address_details": "Details zur Wohnadresse",
+    "uploadDocs": "Dokumente hochladen",
+    "chooseFile": "Datei auswählen",
     "road": "Straße",
     "road_required": "Straße ist erforderlich",
     "roles": "Rollen",
