--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -476,7 +476,9 @@
     "reports": "Ripoti",
     "reports_content": "Yaliyomo kwenye Ripoti",
     "required": "Inahitajika",
-    "residential_address_details": "Maelezo ya",
+    "residential_address_details": "Maelezo ya Anwani ya Makazi",
+    "uploadDocs": "Pakia nyaraka",
+    "chooseFile": "Chagua faili",
     "road": "Barabara",
     "road_required": "Barabara inahitajika",
     "roles": "Vyeo",
