--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -296,7 +296,7 @@
     "bank": "Bank",
     "bank_details": "Bank Details",
     "bank_required": "Bank is required",
-    "banking_details": "Banking Details",
+    "banking_details": "Banking details",
     "basic_information": "Basic Information",
     "branch": "Branch",
     "branch_required": "Branch is required",
@@ -472,7 +472,7 @@
     "policies": "Policies",
     "policies_in_force": "Policies in Force",
     "policy_number": "Policy Number",
-    "postal_address_details": "Postal Address details",
+    "postal_address_details": "Postal address details",
     "preferred_channel": "Preferred Channel",
     "preferred_channel_required": "Preferred Channel is required",
     "preferred_contact_channel": "Preferred contact channel",
@@ -504,7 +504,9 @@
     "reports": "Reports",
     "reports_content": "Reports Content",
     "required": "required",
-    "residential_address_details": "Residential Address details",
+    "residential_address_details": "Residential address details",
+    "uploadDocs": "Upload documents",
+    "chooseFile": "Choose file",
     "road": "Road",
     "road_required": "Road is required",
     "roles": "Roles",
@@ -2256,7 +2258,7 @@
       "capitalInjection": "Capital Injection",
       "deductions": "Deductions",
       "chargeAmount": "Charge Amount"
-      
+
     },
     "allocation": {
       "allocate_funds": "Allocate Funds",
@@ -2279,7 +2281,7 @@
       "allocatedAmount": "Allocated Amount",
       "cancel_receipt": "Cancel Receipt"
     },
-    
+
     "client": {
         "name": "Client Name",
         "date": "Date",
@@ -2292,7 +2294,7 @@
     "common":{
      "close":"cancel"
   },
-  
+
     "receipt_authorization": {
       "title": "Receipt Authorization",
       "normal_tab": "Normal Receipts",
