--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -477,6 +477,8 @@
     "reports_content": "Contenu des rapports",
     "required": "Requis",
     "residential_address_details": "Détails de l'adresse résidentielle",
+    "uploadDocs": "Télécharger des documents",
+    "chooseFile": "Choisir un fichier",
     "road": "Rue",
     "road_required": "Rue requise",
     "roles": "Rôles",
