VQ-3341: Ability to View Internal claims Experience(Policy Summary - Risk Details)

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1033,7 +1033,7 @@
       "policy_remarks": "Policy remarks",
       "limits_of_liability": "Limits of liability",
       "external_claim_exp": "External claims experience",
-      "internal_claim_exp": "Internal claims exp.",
+      "internal_claim_exp": "Internal claims experience",
       "service_providers": "Service providers",
       "reasons_for_pending": "Reasons for pending",
       "insureds": "Insureds",
