updated functionality for client creation

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -418,6 +418,7 @@
     "new_business_account": "新业务帐户",
     "new_claim": "新索赔",
     "new_client": "新客户",
+    "existing_client": "现有客户",
     "new_entity": "新实体",
     "new_policy": "新政策",
     "new_quote": "新报价",
