--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -418,6 +418,7 @@
     "new_business_account": "Neues Geschäftskonto",
     "new_claim": "Neue Schadensmeldung",
     "new_client": "Neuer Kunde",
+    "existing_client": "Bestehender Kunde",
     "new_entity": "Neue Entität",
     "new_policy": "Neue Police",
     "new_quote": "Neues Angebot",
