--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -447,6 +447,7 @@
     "new_business_account": "New Business Account",
     "new_claim": "New Claim",
     "new_client": "New Client",
+    "existing_client": "Existing Client",
     "new_entity": "New Entity",
     "new_policy": "New Policy",
     "new_quote": "New Quote",
