--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -418,6 +418,7 @@
     "new_business_account": "Akaunti ya Biashara Mpya",
     "new_claim": "Madai Mapya",
     "new_client": "Mteja Mpya",
+    "existing_client": "Mteja Aliyepo",
     "new_entity": "Kiumbe Kipya",
     "new_policy": "Sera Mpya",
     "new_quote": "Nukuu Mpya",
