--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -418,6 +418,7 @@
     "new_business_account": "Nueva cuenta comercial",
     "new_claim": "Nuevo reclamo",
     "new_client": "Nuevo cliente",
+    "existing_client": "Cliente Existente",
     "new_entity": "Nueva entidad",
     "new_policy": "Nueva póliza",
     "new_quote": "Nueva cotización",
