--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -865,7 +865,8 @@
       "recursive": "Recursive",
       "rate_table": "Rate Table",
       "absolute_range": "Absolute Range",
-      "step_ranges": "Step Ranges"
+      "step_ranges": "Step Ranges",
+      "effective_date":"Effective date"
     },
     "policy": {
       "underwriting_new_transaction": "Underwriting: new transaction",
