--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -833,7 +833,8 @@
       "recursive": "Récursif",
       "rate_table": "Tableau des Tarifs",
       "absolute_range": "Plage Absolue",
-      "step_ranges": "Plages d'Étapes"
+      "step_ranges": "Plages d'Étapes",
+      "effective_date": "Date d'entrée en vigueur"
     },
     "policy": {
       "underwriting_new_transaction": "Souscription : Nouvelle transaction",
