--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -269,7 +269,8 @@
     "payIntermediary": "Payer l'intermédiaire",
     "ranking": "Classement",
     "agentName": "Nom de l'agent",
-    "agentShortDesc": "Description courte de l'agent"
+    "agentShortDesc": "Description courte de l'agent",
+    "code": "Code"
   },
   "entities": {
     "account_number": "Numéro de compte",
@@ -1262,79 +1263,79 @@
         "edit_peril": "Modifier le péril",
         "confirm_delete_peril": "Êtes-vous sûr de vouloir supprimer ce péril ?",
         "enter_peril": "Entrez le péril"
-    },
-    "claim_transaction": {
-      "claim_transaction_details": "Détails de la transaction de réclamation",
-      "claim_number": "Numéro de réclamation",
-      "product": "Produit",
-      "risk_wef": "Risque WEF",
-      "loss_description": "Description de la perte",
-      "claim_status": "Statut de la réclamation",
-      "catastrophe": "Catastrophe",
-      "policy_number": "Numéro de police",
-      "insured": "Assuré",
-      "risk_wet": "Risque WET",
-      "booked_by": "Réservé par",
-      "next_review_date": "Date de la prochaine revue",
-      "event": "Événement",
-      "endorsement_number": "Numéro d'endossement",
-      "risk": "Risque",
-      "claim_loss_date": "Date de la perte de la réclamation",
-      "booked_date": "Date de réservation",
-      "agent_intermediary": "Agent/Intermédiaire",
-      "priority_level": "Niveau de priorité",
-      "client": "Client",
-      "risk_value": "Valeur du risque",
-      "claim_notification_date": "Date de notification de la réclamation",
-      "admit_liability": "Admettre la responsabilité",
-      "insured_policy_no": "Numéro de police assuré",
-      "currency": "Devise"
-    },
-    "claim_transaction_report": {
-      "claim_transaction_report": "Rapport de transaction de réclamation",
-      "claim_revisions": "Révisions de réclamations",
-      "claim_payments": "Paiements de réclamations",
-      "letters_and_memos": "Lettres et mémos",
-      "policy_enquiry": "Enquête sur la police",
-      "back_to_claim_enquiry": "Retour à l'enquête sur la réclamation",
-      "trans_type": "Type de transaction",
-      "trans_date": "Date de la transaction",
-      "gross_liability": "Responsabilité brute",
-      "net_liability_payee": "Bénéficiaire de la responsabilité nette",
-      "paid_amount": "Montant payé",
-      "authorised_by": "Autorisé par",
-      "authorise_date": "Date d'autorisation",
-      "cheque_number": "Numéro de chèque",
-      "cheque_date": "Date du chèque",
-      "receipt_number": "Numéro de reçu",
-      "action": "Action"
-    },
-    "view_transaction":{
-      "claimRevisionSummary": "Résumé de la révision de la réclamation",
-      "currentTicket": "Mon billet actuel",
-      "lossOpeningDataEntry": "Saisie des données d'ouverture de sinistre",
-      "transactionType": "Type de transaction",
-      "revisionDate": "Date de révision",
-      "revisionOwnPercentage": "Révision Propre %",
-      "ownGrossAmount": "Montant brut propre",
-      "ownShare": "Part propre",
-      "authorizedBy": "Autorisé par",
-      "revisionAuthorized": "Révision autorisée",
-      "dateAuthorized": "Date d'autorisation",
-      "revisionRemarks": "Remarques sur la révision",
-      "claimOpeningPeril": "OUVERTURE DE RÉCLAMATION PERIL",
-      "makeReady": "Prêt à l'emploi",
-      "undoMakeReady": "Annuler Prêt à l'emploi",
-      "authorize": "Autoriser",
-      "dispatchDocuments": "Expédier les documents",
-      "printVoucher": "Imprimer le bon",
-      "back": "Retour",
-      "reassign": "Réaffecter",
-      "sendEmail": "Envoyer un courriel",
-      "sendSMS": "Envoyer un SMS"
-    },
-    "claim_booking":{
-     "lossDate": "Date de la perte",
+      },
+      "claim_transaction": {
+        "claim_transaction_details": "Détails de la transaction de réclamation",
+        "claim_number": "Numéro de réclamation",
+        "product": "Produit",
+        "risk_wef": "Risque WEF",
+        "loss_description": "Description de la perte",
+        "claim_status": "Statut de la réclamation",
+        "catastrophe": "Catastrophe",
+        "policy_number": "Numéro de police",
+        "insured": "Assuré",
+        "risk_wet": "Risque WET",
+        "booked_by": "Réservé par",
+        "next_review_date": "Date de la prochaine revue",
+        "event": "Événement",
+        "endorsement_number": "Numéro d'endossement",
+        "risk": "Risque",
+        "claim_loss_date": "Date de la perte de la réclamation",
+        "booked_date": "Date de réservation",
+        "agent_intermediary": "Agent/Intermédiaire",
+        "priority_level": "Niveau de priorité",
+        "client": "Client",
+        "risk_value": "Valeur du risque",
+        "claim_notification_date": "Date de notification de la réclamation",
+        "admit_liability": "Admettre la responsabilité",
+        "insured_policy_no": "Numéro de police assuré",
+        "currency": "Devise"
+      },
+      "claim_transaction_report": {
+        "claim_transaction_report": "Rapport de transaction de réclamation",
+        "claim_revisions": "Révisions de réclamations",
+        "claim_payments": "Paiements de réclamations",
+        "letters_and_memos": "Lettres et mémos",
+        "policy_enquiry": "Enquête sur la police",
+        "back_to_claim_enquiry": "Retour à l'enquête sur la réclamation",
+        "trans_type": "Type de transaction",
+        "trans_date": "Date de la transaction",
+        "gross_liability": "Responsabilité brute",
+        "net_liability_payee": "Bénéficiaire de la responsabilité nette",
+        "paid_amount": "Montant payé",
+        "authorised_by": "Autorisé par",
+        "authorise_date": "Date d'autorisation",
+        "cheque_number": "Numéro de chèque",
+        "cheque_date": "Date du chèque",
+        "receipt_number": "Numéro de reçu",
+        "action": "Action"
+      },
+      "view_transaction": {
+        "claimRevisionSummary": "Résumé de la révision de la réclamation",
+        "currentTicket": "Mon billet actuel",
+        "lossOpeningDataEntry": "Saisie des données d'ouverture de sinistre",
+        "transactionType": "Type de transaction",
+        "revisionDate": "Date de révision",
+        "revisionOwnPercentage": "Révision Propre %",
+        "ownGrossAmount": "Montant brut propre",
+        "ownShare": "Part propre",
+        "authorizedBy": "Autorisé par",
+        "revisionAuthorized": "Révision autorisée",
+        "dateAuthorized": "Date d'autorisation",
+        "revisionRemarks": "Remarques sur la révision",
+        "claimOpeningPeril": "OUVERTURE DE RÉCLAMATION PERIL",
+        "makeReady": "Prêt à l'emploi",
+        "undoMakeReady": "Annuler Prêt à l'emploi",
+        "authorize": "Autoriser",
+        "dispatchDocuments": "Expédier les documents",
+        "printVoucher": "Imprimer le bon",
+        "back": "Retour",
+        "reassign": "Réaffecter",
+        "sendEmail": "Envoyer un courriel",
+        "sendSMS": "Envoyer un SMS"
+      },
+      "claim_booking": {
+        "lossDate": "Date de la perte",
         "partyToBlame": "Partie à blâmer",
         "lossDescription": "Description de la perte",
         "type_of_loss": "Type de perte",
@@ -1354,7 +1355,7 @@
         "recovery_steps_taken": "Étapes de récupération prises",
         "road_surface_condition": "État de la surface de la route"
       }
-  }
+    }
   },
   "lms": {
     "common": {},
